--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Fitness</string>
+    <string name="app_name">인간 맛쿠키</string>
     <string name="signup_text"><u>회원가입하기</u></string>
 </resources>
